leauge sim completed with main functionalities, without predictions
